Feat: Added delete user botton in the ADMIN page
